LU-11276 ldlm: don't apply ELC to converting and DOM locks

Prevent ELC for locks being converted and for locks
having DOM bit set to avoid data flush without need.

Test-Parameters: testlist=racer,racer,racer
Signed-off-by: Mikhail Pershin <mpershin@whamcloud.com>
Change-Id: Id1429412f2ccd77f037bef2a851d22874a44dce6
Reviewed-on: https://review.whamcloud.com/33125
Tested-by: Jenkins
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>